objects/ASI_MFM_BatchLog__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_LogType__c</fullName>
        <label>Log Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto Receipt</fullName>
                </value>
                <value>
                    <fullName>Close PO</fullName>
                </value>
                <value>
                    <fullName>eMarket</fullName>
                </value>
                <value>
                    <fullName>POSM Upload</fullName>
                </value>
                <value>
                    <fullName>POSM Image</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Log_Detail__c</fullName>
        <label>Log Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Need_Operation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need Operation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Operation_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Operation Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Operation_Error_Message__c</fullName>
        <label>Operation Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Operation_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Operation Error</label>
        <type>Checkbox</type>
    </fields>
    <label>Batch Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Log_Detail__c</columns>
        <columns>ASI_MFM_LogType__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Henry</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Log_Detail__c</columns>
        <columns>ASI_MFM_LogType__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>11/30/2019 12:00 AM</value>
        </filters>
        <filters>
            <field>ASI_MFM_LogType__c</field>
            <operation>equals</operation>
            <value>POSM Upload</value>
        </filters>
        <label>All-Henry</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_emarket</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_LogType__c</columns>
        <columns>ASI_MFM_Log_Detail__c</columns>
        <columns>ASI_MFM_Need_Operation__c</columns>
        <columns>ASI_MFM_Operation_Done__c</columns>
        <columns>ASI_MFM_Operation_Error__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_MFM_LogType__c</field>
            <operation>equals</operation>
            <value>eMarket</value>
        </filters>
        <label>All emarket</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_emarket_error</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>ASI_MFM_Log_Detail__c</columns>
        <columns>ASI_MFM_Operation_Done__c</columns>
        <columns>ASI_MFM_Operation_Error__c</columns>
        <columns>ASI_MFM_Operation_Error_Message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_MFM_LogType__c</field>
            <operation>equals</operation>
            <value>eMarket</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_BatchLog__c.ASI_MFM_CN_Batch_Log</value>
        </filters>
        <filters>
            <field>ASI_MFM_Operation_Error__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All emarket (error)</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>B-{0000000}</displayFormat>
        <label>Batch Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Logs</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_CN_Batch_Log</fullName>
        <active>true</active>
        <label>CN Batch Log</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>